fix the spacing of the checkboxes

--- a/css/screen.css
+++ b/css/screen.css
@@ -1,5 +1,9 @@
 input{
-  padding: 18px 25px;
-  margin: 8px 0;
+  padding: 15px 20px;
+  margin: 10px 0;
   box-sizing: border-box;
+}
+
+checkboxes{
+  margin-left: 18px;
 }
